# insta_scraping

./: .gitignore  README.md  get_profile.py  instrucoes.txt  multichatz.oficial_session  pyproject.toml  requirements.txt  save_cookies.py  test_session.py
backups/: bkp1.py  bkp2.py  main.py  test_instaloader.py  teste.py
